# opencv

./: CMakeLists.txt  Makefile  README.md
include/: main.h
opencvPy/: ai_step.py  all_center_test1.py  board_center.json  center.py  communication.py  error_current.py  file_utils.py  location.py  pxcd2world.py  read_file.json  square_centers.json
src/: daiding  main.backup  main.cpp
